# repro-clippy-await_holding_invalid_type

./: Cargo.toml  Makefile  README.md  clippy.toml
othercrate/: Cargo.toml
othercrate/src/: lib.rs
src/: lib.rs
